--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Patrick Hand';
     color: rgb(0, 0, 0);
     border-color: #4438ea;
 }
