--- a/styles.css
+++ b/styles.css
@@ -98,12 +98,15 @@ tr:hover svg {
     h1{
         font-family: 'Crimson Text', serif;
         font-size: 46px;
-        font-weight: 300;
+        font-weight: 450;
         margin-top: 50px;
         color: black;
     }
     h2{
-        margin-top: 20px;
+        font-family: 'Crimson Text', serif;
+        font-size: 25px;
+        font-weight: 300;
+        margin-top: 10px;
         color: black;
     }
   p{
