--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,17 @@
 body {
     width: 100%;
     height: 100vh;
-    background-image: url('res/clouds.jpg');
+    background-size: 100vw 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#abc {
+    background-color: aquamarine;
+    width: 100%;
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -22,12 +32,12 @@ body {
 a:link, a:visited {
     background-color: #390ff3;
     color: white;
-    padding: 14px 25px;
+    padding: 12px 12px;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin-right: 30px;
-    margin-top: 30px;
+    text-decoration:wavy;
+    display: inline-flex;
+    margin-right: 15px;
+    margin-top: 10px;
     align-self: flex-end;
   }
   
@@ -112,5 +122,5 @@ tr:hover svg {
   p{
       font-weight: bolder;
       font-size: large;
-      color: yellow;
+      color: black;
   }
