--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,6 @@ body {
     flex-direction: column;
 }
 
-a{
-    display: inline-flex;
-}
-
 a:link, a:visited {
     background-color: #FC5130;
     color: white;
@@ -42,7 +38,6 @@ a:link, a:visited {
     margin-right: 10vh;
     padding: 12px;
     border-radius: 15px;
-    
     font-family: 'Crimson Text', serif;
   }
 
@@ -94,7 +89,6 @@ tr:hover svg {
     transform: scale(1.2);
 }
 #myInput {
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Search_Icon.svg/1024px-Search_Icon.svg.png');
     background-position: 10px 12px; 
     background-repeat: no-repeat;
     width: 80%; 
@@ -103,12 +97,13 @@ tr:hover svg {
     border: 1px solid #ddd;
     margin-bottom: 12px; 
   }
+  
   div{
       visibility: hidden;
   }
 
   input{
-      margin-top: 25px;
+      margin-top: 10px;
       font-weight: bold;
      }
     h1{
@@ -129,4 +124,13 @@ tr:hover svg {
       font-weight: bolder;
       font-size: large;
       color: #FFFAFF;
+  }
+
+  h3 {
+      font-size: 35px;
+      font-family: 'Crimson Text', serif;
+      color: #303036;
+      align-self: flex-start;
+      margin-left: 150px;
+      margin-bottom: 0%;
   }
