--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     flex-direction: column;
 }
 
-#abc {
+#top {
     background-color: #303036;
     width: 100%;
     background-size: 100vw 100vh;
@@ -144,7 +144,7 @@ tr:hover svg {
       margin-bottom: 0%;
   }
 
-  #bcd {
+  #bottom {
     background-color: #303036;
     width: 100%;
     display: flex;
@@ -164,7 +164,10 @@ tr:hover svg {
     padding: 12px;
     border-radius: 15px;    
   }
-#lol {
+  button:hover {
+      background-color: #4438ea;
+  }
+#bid {
     cursor: pointer;
     font-family: 'Crimson Text', serif;
 }
