--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ tr:hover svg {
   #bottom {
     background-color: #303036;
     width: 100%;
-    display: flex;
+    display:inline-flex;
     margin-top: 0 auto;
     height: 300px;
   }
@@ -172,3 +172,17 @@ tr:hover svg {
     cursor: pointer;
     font-family: 'Crimson Text', serif;
 }
+
+h4 {
+    text-align: center;
+    font-size: 18px;
+    color: black;
+    text-align: center;
+    align-items: flex-end;
+    align-self: flex-end;
+    align-content:flex-end;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 120px;
+}
+ 
