--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,8 @@ h4 {
     margin-left: 120px;
 }
 
+b:link b:active {
+    padding :10px;
+    background-color: #303036;
+    border-radius: 15px;
+}
