--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ tr:hover svg {
     background-position: 10px 12px; 
     background-repeat: no-repeat;
     width: 80%; 
-    color: yellow;
+    color: #ffff89;
     font-size: 16px;
     padding: 12px 20px 12px 40px; 
     border: 1px solid #ddd;
