--- a/styles.css
+++ b/styles.css
@@ -52,17 +52,16 @@ table{
     text-align: center;
     width: 80%;
     border-collapse: collapse;
-    border: 2px solid black;
 }
 
 tr {
     transition: all 0.3s ease;
-    border: 2px solid black;
     padding: 15px;
     font-weight: bold;
 }
 td{
-    border: 2px solid black;
+   font-size: 20px;
+   font-family: 'Crimson Text', serif;
 }
 
 tr:nth-child(even) {
