--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ tr:hover svg {
       font-weight: 400;
       color: #303036;
       align-self: flex-start;
-      margin-left: 150px;
+      margin-left: 10%;
       margin-bottom: 0%;
   }
 
