--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,14 @@ td{
    font-family: 'Crimson Text', serif;
 }
 
+#table2 tr:nth-child(even) {
+    background-color: #FEE1C7;
+    font-family: 'Crimson Text', serif;
+}
+
+#table2 tr:nth-child(odd) {
+    background-color: #FB8D74;
+}
 tr:nth-child(even) {
     background-color: rgba(95, 197, 208, 0.41);
 }
