--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 
 a:link, a:visited {
     background-color: #3c3c44;
-    color: white;
+    color: black;
     text-align: center;
     align-self:flex-end;
     margin-top: 10px;
