--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ tr:hover svg {
       font-size: 30px;
       font-family: 'Crimson Text', serif;
       font-weight: 400;
-      color: #ffee00;
+      color: #000000;
       align-self: flex-start;
       margin-left: 10%;
       margin-bottom: 0%;
