--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ td{
    font-size: 20px;
    font-family: 'Crimson Text', serif;
    border-collapse: collapse;
-    border: 1px solid black
+    border: 1px solid black;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
