--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,14 @@ td{
     font-weight: bolder;
     
 }
+#table2 thead :first-child td{
+    font-weight: 900;
+    font-size: 22px;
+    background-color: #086aeb;
+    color: rgb(255, 255, 255);
+    font-style: normal;
+    font-weight: bolder;
+}
 th{
     -webkit-touch-callout: none;
     -webkit-user-select: none;
