Fixed Logo and Added responsive headers

--- a/styles.css
+++ b/styles.css
@@ -225,3 +225,37 @@ h4 {
     margin-bottom: 40px;
     margin-left: 120px;
 }
+
+
+
+/*
+
+Style for logo and its content!
+
+*/
+#logo-content{
+    display:flex;
+    flex-wrap: wrap;
+}
+
+img{
+    width:18%;
+    height: auto;
+    float: left;
+    margin-left: 2%;
+    margin-top: 3% ;
+}
+.headers{
+    float: right;
+}
+
+@media only screen and (max-width:1200px) {
+    #logo-content{
+        display:contents;
+        flex-wrap: wrap;
+    }
+
+}
+
+
+
