--- a/styles.css
+++ b/styles.css
@@ -258,4 +258,14 @@ img{
 }
 
 
+@media only screen and (max-width:400px) {
+    #logo-content{
+        display:contents;
+        flex-wrap: wrap;
+    }
+    
+    img{
+        width:50%;
+    }
+}
 
